--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: home
-title: BLOG
-description: "The personal blog of Hossain Mohd. Faysal, a doctoral candidate in Electrical Engineering at University of Pennsylvania."
-headline: An Engineer's Diary
-tags: [Hossain, Mohd, Faysal, electrical, engineering, blog, university, pennsylvania, doha, Qatar]
+title: My Blog 
+description: "Regular blog of a regular guy."
+headline: 
+tags: 
 ---
 {% if site.paginate %}
 	{% for post in paginator.posts %}
